--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     <link rel="<%= chunk.initial?'preload':'prefetch' %>" href="<%= htmlWebpackPlugin.files.publicPath + file %>" as="<%= file.match(/\.css$/)?'style':'script' %>"><% }}} %> -->
 </head>
 <body>
-    <h1>Webpack HTML Template</h1>
+    <h1>Webpack HTML Templats</h1>
 </body>
 </html>
